# git-vuln-finder

./: .gitchangelog.rc  .gitignore  AUTHORS  README.md  REQUIREMENTS  pyproject.toml
.github/workflows/: codeql.yml  pythonapp.yml
git_vuln_finder/: __init__.py  finder.py  pattern.py  run.py  vulnerability.py
git_vuln_finder/patterns/en/medium/: c  c.prefix  crypto  crypto.suffix
patterns/en/medium/: crypto  crypto.prefix  vuln
tests/: conftest.py  gharchive_test.json  sample_output.json  test_finder.py
